--- a/css/navigation.css
+++ b/css/navigation.css
@@ -2,12 +2,12 @@
 .navbar {
     overflow: hidden;
     background-color: #333;
-    font-family: Arial;
+    font-family: 'Open Sans', sans-serif;
     }
-        
+
 .navbar a {
     float: left;
-    font-size: 16px;
+    font-size: 1em;
     color: white;
     text-align: center;
     padding: 14px 16px;
@@ -21,7 +21,7 @@
 }
 
 .dropdown .dropbtn {
-    font-size: 16px;    
+    font-size: 1em;
     border: none;
     outline: none;
     color: white;
@@ -59,4 +59,3 @@
 .dropdown:hover .dropdown-content {
     display: block;
 }
- 
