--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,25 @@ background-size: 100%;
 padding-top: 16.22%;}
 
 .logo {float:left;}
+
+h1 {
+  font-family: 'Quicksand', sans-serif;
+font-weight: 500;
+font-size: 2em;
+}
+
+h2 {
+  font-family: 'Quicksand', sans-serif;
+font-weight: 400;
+font-size: 1.5em;
+
+}
+
+p {
+font-family: 'Open Sans', sans-serif;
+  font-size: 1em;
+}
+
+footer {
+  background-color: green;
+}
