--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,7 +1,7 @@
 /* Navigation bar */
 .navbar {
     overflow: hidden;
-    background-color: #333;
+    background-color: #747f5a;
     font-family: 'Open Sans', sans-serif;
     }
 
@@ -16,12 +16,15 @@
 
 /* Dropdown menu*/
 .dropdown {
+  font-family: 'Open Sans', sans-serif;
     float: left;
     overflow: hidden;
+
 }
 
 .dropdown .dropbtn {
-    font-size: 1em;
+font-size: 1em;
+font-family: 'Open Sans', sans-serif;
     border: none;
     outline: none;
     color: white;
@@ -29,8 +32,11 @@
     background-color: inherit;
 }
 
+
+
 .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
+    background-color: #f9f9f9;
+    color: #747F5A;
 }
 
 /* Options in the dropdown menu*/
@@ -45,7 +51,7 @@
 
 .dropdown-content a {
     float: none;
-    color: black;
+    color: #747F5A;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -53,7 +59,8 @@
 }
 
 .dropdown-content a:hover {
-    background-color: #ddd;
+    background-color: #AEBF87;
+    color: #ffffff;
 }
 
 .dropdown:hover .dropdown-content {
