--- a/css/style.css
+++ b/css/style.css
@@ -3,27 +3,35 @@
     padding: 0;
 }
 body {
-	background-color: #f5f5dc;
+    background-color: #f5f5dc;
 }
 article {
-	width: 1200px;
-	background-color: #ffffff;
-	margin:auto;
-	overflow: hidden;
+    width: 1200px;
+    background-color: #ffffff;
+    margin: auto;
+    overflow: hidden;
 }
 h1 {
     font-family: 'Quicksand', sans-serif;
     font-weight: 500;
     font-size: 2em;
+    text-align: center;
+    margin-top: 1%;
 }
 h2 {
     font-family: 'Quicksand', sans-serif;
-    font-weight: 400;
+    font-weight: 500;
     font-size: 1.5em;
+    text-align: center;
+    margin-top: 4%;
+    margin-bottom: 1%;
 }
 p {
     font-family: 'Open Sans', sans-serif;
     font-size: 1em;
+}
+#welcometext {
+    margin: 1% 5% 0 5%;
 }
 /* align the slideshow in the centre of the page*/
 #projectsandeventsbox {
@@ -36,8 +44,14 @@ p {
 #weatherbox {
     width: 50%;
     float: left;
+    margin-top: 2%;
+}
+#iframe {
+    text-align: center;
+    padding-top: 1%;
 }
 #maintenancebox {
     width: 50%;
     float: left;
+	margin-top: 2%;
 }
