--- a/css/footer.css
+++ b/css/footer.css
@@ -14,6 +14,7 @@ h3 {
     font-weight: 400;
     font-size: 1.5em;
     color: #ffffff;
+	margin-bottom: 1%;
 }
 li {
     list-style-type: none;
@@ -36,6 +37,10 @@ div.logo-copyright {
 }
 img.footerLogo {
     width: 40%;
+}
+#contactlist li{
+	text-align: left;
+	margin-left: 38%;
 }
 div.contactInformation {
      width: 34%;
