--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ p {
     font-family: 'Open Sans', sans-serif;
     font-size: 1em;
 }
+/*home page styling starts here*/
 .welcometext {
     margin: 1% 5% 0 5%;
 }
@@ -53,40 +54,41 @@ p {
 #maintenancebox {
     width: 50%;
     float: left;
-	margin-top: 2%;
+    margin-top: 2%;
 }
-
+/*projects and events landing page styling starts here*/
+/*position the images in the centre, equally spaced*/
 .boxesprojectsandevents {
-  width: 44%;
-  float: left;
-  position: relative;
-  text-align: center;
-  color: #ffffff;
-
+    width: 44%;
+    float: left;
+    position: relative;
+    text-align: center;
+    color: #ffffff;
+		}
+#projects {
+    margin: 2% 2% 1% 4%;
 }
-
-.boxesprojectsandevents {
-  width: 44%;
-  float: left;
-  position: relative;
-  text-align: center;
-  color: #ffffff;
+#gallery {
+    margin: 1% 2% 2% 4%;
 }
-
-
+#events {
+    margin: 2% 4% 1% 2%;
+}
+#calendar {
+    margin: 1% 4% 2% 2%;
+}
 .boxesprojectsandevents img {
-  width: 100%;
-
+    width: 100%;
+	
 }
+/*add opaque overlay on hover*/
 .boxesprojectsandevents img:hover {
-  opacity: 0.5;
+    opacity: 0.5;
 }
-
-
+/*overlay and align the text to centre it on each image, code from W3Schools: https://www.w3schools.com/howto/howto_css_image_text.asp*/
 .boxesprojectsandevents h2 {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-}
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+	}
