Styling for porjects subpage
Changed h3 to h2, styled text and images, styled as much of the form as we could. Added a margin to the "welcometext" class

--- a/css/footer.css
+++ b/css/footer.css
@@ -9,7 +9,7 @@ footer {
 	text-align: center;
 }
 
-h3 {
+footer h3 {
     font-family: 'Quicksand', sans-serif;
     font-weight: 400;
     font-size: 1.5em;
