--- a/css/navigation.css
+++ b/css/navigation.css
@@ -3,6 +3,7 @@
     overflow: hidden;
     background-color: #747f5a;
     font-family: 'Open Sans', sans-serif;
+	    padding: 0 25% 0 25%;
     }
 
 .navbar a {
