Change Banner, add pictures
Changing the Banner to the version with logo
adding history pictures

--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,5 @@
 #top-banner {
-  background-image: url(../pictures/banner-trees.jpg);
+  background-image: url(../pictures/banner-trees-logo.jpg);
 background-size: 100%;
 padding-top: 16.22%;}
 
