--- a/css/style.css
+++ b/css/style.css
@@ -286,3 +286,9 @@ div.historyTextLeft {
 .greyRow {
     background-color: beige;
 }
+
+/*Under Contruction Page*/
+#underConstructionImg {
+    padding: 0 10% 0 10%;
+    width: 80%;
+}
