--- a/css/style.css
+++ b/css/style.css
@@ -261,10 +261,10 @@ div.historyTextLeft {
 /*ideParagraph {
 	float: left;
 }*/
-<<<<<<< HEAD
+
 div.maps {
     float: left;
-    width: 55%;
+    width: 50%;
     padding: 9% 0 0 0;
 }
 div.newMap img {
@@ -279,14 +279,15 @@ div.oldMap img {
 div.textRight {
     width: 40%;
     float: left;
-    padding: 0 0 0 5%;
+    padding: 0 0 0 10%;
 }
 div.textLeft {
 	float: left;
 	width: 50%;
+	padding: 0 0 9% 0;
 }
 
-=======
+
 
 
 /*Location subpage */
@@ -319,4 +320,3 @@ div.textLeft {
     padding: 0 10% 0 10%;
     width: 80%;
 }
->>>>>>> 57b7a3af00d04739efcb0fd09950f6fa52218dc3
