--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ h3 {
 p {
     font-family: 'Open Sans', sans-serif;
     font-size: 1em;
+	padding-top: 1%;
 }
 /*home page styling starts here*/
 
@@ -332,7 +333,15 @@ div.textLeft {
 .greyRow {
     background-color: beige;
 }
-
+div.distanceOfLandmarks {
+	width: 48%;
+	float: left;
+}
+div.toilets {
+	width: 48%;
+	float: left;
+	padding-left: 4%;
+}
 /*Under Contruction Page*/
 #underConstructionImg {
     padding: 0 10% 0 10%;
