Minor fixes and adjustments
- Adding comments to the JS
- removing the Blog from the navigation bar
- changing the cursor (nav bar)
- updating the sitemap

--- a/css/faq.css
+++ b/css/faq.css
@@ -1,3 +1,5 @@
+/* Based on the Accordion example from w3schools (https://www.w3schools.com/howto/howto_js_accordion.asp) with apllied changes */
+
 .question {
     background-color: #eee;
     color: #444;
@@ -6,7 +8,6 @@
     border: none;
     text-align: left;
     outline: none;
-    transition: 0.4s;
 }
 
 .active, .question:hover {
