--- a/css/style.css
+++ b/css/style.css
@@ -49,11 +49,15 @@ a:hover {
 td {
 	font-family: 'Open Sans', sans-serif;
     font-size: 1em;
+    border: none;
+    outline: none;
 }
 th {
 	font-family: 'Open Sans', sans-serif;
     font-size: 1em;
 	padding-right: 4%;
+    border: none;
+    outline: none;
 }
 
 /*home page styling starts here*/
@@ -186,14 +190,28 @@ input[type=file] {
 th, td {
 	padding: 2%;
 }
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
+
 div.contactForm {
 	width: 45%;
 	float: left;
 }
+
+#name {
+    max-width: 90%;
+}
+
+#senderEMail {
+    max-width: 90%;
+}
+
+#rsnCntct {
+    max-width: 90%;
+}
+
+#msgContact {
+    max-width: 90%;
+}
+
 /*events sub-page styling starts here*/
 /*centering and scaling all the images*/
 #zulubox {
