Changed <li> to <p> in footer
Can't nest <li> inside divs - according to W3C error checker, changed <li> to <p>

--- a/css/footer.css
+++ b/css/footer.css
@@ -16,8 +16,7 @@ footer h3 {
     color: #ffffff;
 	margin-bottom: 1%;
 }
-li {
-    list-style-type: none;
+p {
     font-family: 'Open Sans', sans-serif;
     font-size: 1em;
     color: #ffffff;
