--- a/css/footer.css
+++ b/css/footer.css
@@ -16,7 +16,7 @@ footer h3 {
     color: #ffffff;
 	margin-bottom: 1%;
 }
-p {
+footer p {
     font-family: 'Open Sans', sans-serif;
     font-size: 1em;
     color: #ffffff;
