--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,12 +1,68 @@
+
 /* Navigation bar */
+
+@media only screen and (min-width: 280px) {
+nav#desktopNav {
+    display: none;
+}
+nav#navigationIcon {
+    float: right;
+    width: 20%;
+    margin: 1%;
+}
+nav#navigationIcon img {
+    width: 100%;
+}
+nav#mobileNav {
+    text-align: center;
+    font-size: 0.8em;
+    font-family: 'Open Sans', sans-serif;
+}
+nav#mobileNav li {
+    list-style: none;
+    padding: 0.8em;
+    border: solid 1px #ffffff;
+    width: 50%;
+    float: left;
+    background-color: #747f5a;
+}
+nav#mobileNav li a {
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 1.2em;
+}
+nav#mobileNav li a:hover {
+    font-weight: normal;
+}
+}
+
+@media only screen and (min-width: 400px) {
+nav#navigationIcon {
+    width: 15%;
+    margin: 2%;
+}
+}
+
+@media only screen and (min-width: 700px) {
+nav#mobileNav {
+    display: none;
+}
+nav#navigationIcon {
+    display: none;
+}
+nav#desktopNav {
+    display: block;
+    width: 100%;
+    background-color: #747f5a;
+    text-align: center;
+}
 button {
     cursor: pointer;
 }
 .navbar {
     overflow: hidden;
-    background-color: #747f5a;
+    display: inline-block;
     font-family: 'Open Sans', sans-serif;
-    padding: 0 25% 0 25%;
 }
 .navbar a {
     float: left;
@@ -62,58 +118,4 @@ button {
 .dropdown:hover .dropdown-content {
     display: block;
 }
-/*styling for mobile navigation starts here*/
-nav#navigationIcon {
-    float: right;
-    width: 20%;
-    margin: 1%;
-}
-nav#navigationIcon img {
-    width: 100%;
-}
-nav#mobileNav {
-    text-align: center;
-    font-size: 0.8em;
-    font-family: 'Open Sans', sans-serif;
-}
-nav#mobileNav li {
-    list-style: none;
-    padding: 0.8em;
-    border: solid 1px #ffffff;
-    width: 50%;
-    float: left;
-    background-color: #747f5a;
-}
-nav#mobileNav li a {
-    color: #ffffff;
-    text-decoration: none;
-    font-size: 1.2em;
-}
-nav#mobileNav li a:hover {
-    font-weight: normal;
-}
-
-@media only screen and (min-width: 280px) {
-nav#desktopNav {
-    display: none;
-}
-}
-
-@media only screen and (min-width: 400px) {
-nav#navigationIcon {
-    width: 15%;
-    margin: 2%;
-}
-}
-
-@media only screen and (min-width: 700px) {
-nav#mobileNav {
-    display: none;
-}
-nav#navigationIcon {
-    display: none;
-}
-nav#desktopNav {
-		display:flex;
-	}
 }
