--- a/css/header.css
+++ b/css/header.css
@@ -4,26 +4,42 @@ nav#desktopNav {
 }
 header {
     background-image: url(../pictures/banner-trees-logo.jpg);
-    height: auto;
+    height: 100px;
+	position: relative;
 }
 div#logo {
-    float: left;
-    width: 70%;
-    margin: 1%;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 div#logo img {
     width: 100%;
 }
+nav#navigationIcon {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 80%;
+    transform: translate(-10%, -50%);
+	width: 15%;
+}
+nav#navigationIcon img {
+    width: 100%;
+}
 }
 
-@media only screen and (min-width: 400px) {
-div#logo {
-    width: 50%;
-    margin: 2%;
-}
+@media only screen and (min-width: 580px) {
+	header {
+		height: 120px;
+	}
 }
 
 @media only screen and (min-width: 700px) {
+	header {
+		height: auto;
+	}
 	div#logo {
 		display: none;
 	}
