--- a/css/navigation.css
+++ b/css/navigation.css
@@ -9,6 +9,7 @@ nav#mobileNav {
     text-align: center;
     font-size: 0.8em;
     font-family: 'Open Sans', sans-serif;
+    box-sizing: border-box;
 }
 .menu {
     list-style: none;
