--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ h1 {
     text-align: center;
     margin-top: 1%;
     margin-bottom: 1%;
+	color: #4d543d;
 }
 h2 {
     font-family: 'Quicksand', sans-serif;
@@ -26,6 +27,7 @@ h2 {
     text-align: center;
     margin-top: 4%;
     margin-bottom: 1%;
+	color: #4d543d;
 }
 h3 {
     font-family: 'Quicksand', sans-serif;
