--- a/css/header.css
+++ b/css/header.css
@@ -2,6 +2,7 @@
 nav#desktopNav {
     display: none;
 }
+	/*positioning of the logo CSS used from W3Schools: https://www.w3schools.com/css/css_align.asp*/
 header {
     background-image: url(../pictures/banner-trees.jpg);
     height: 100px;
